--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,12 @@ body {
     -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 4s; /* Firefox < 16 */
         -ms-animation: fadein 4s; /* Internet Explorer */
-         -o-animation: fadein 4s; /* Opera < 12.1 */
             animation: fadein 4s;
     padding: 24px;
+}
+
+footer {
+    font-size: 18px;
 }
 .row {
     display: flex;
@@ -42,6 +45,12 @@ a{
 
 a:hover {
     text-decoration: underline;
+}
+
+.right {
+    margin-top: 0px;
+    text-align: right;
+    float: right;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -79,12 +88,6 @@ a:hover {
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
