--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ a:hover {
     float: right;
 }
 
+.right > a {
+    padding-right: 20px;
+}
+
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
     .column {
