--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,46 @@ a:hover {
     font-weight: bold;
     transition: 0.3s;
   }
+
+  .prev {
+    position: absolute;
+    top: 40%;
+    left: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .next {
+    position: absolute;
+    top: 40%;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .prev, .next {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+  }
+  
+  .prev, .next {
+    padding: 16px;
+  }
+  .prev:hover,
+  .prev:focus,
+  .next:hover,
+  .next:focus {
+    background-color: rgba(0, 0, 0, 0.8);
+}
   
   .close:hover,
   .close:focus {
@@ -187,5 +227,8 @@ a:hover {
     .modal-content {
         height: auto;
         width: 90%;
+    }
+    .prev, .next {
+        display: none;
     }
 }
