--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,16 @@ html{
     --link-color: #ff9067;
 }
 
+.dark-theme {
+  --text-color: #eee;
+  --bkg-color: #152028;
+}
+
+.light-theme {
+  --text-color: #222;
+  --bkg-color: #fff;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
@@ -10,6 +20,8 @@ body {
         -ms-animation: fadein 4s; /* Internet Explorer */
             animation: fadein 4s;
     padding: 24px;
+    color: var(--text-color);
+    background-color: var(--bkg-color);
 }
 
 body > *:not(.row, .modal, header) {
@@ -43,8 +55,7 @@ footer {
     margin-top: 20px;
     vertical-align: middle;
     width: 100%;
-    box-shadow: 10px 10px 10px grey;
-
+    box-shadow: 10px 10px 10px #00000080;
 }
 
 a{
@@ -58,7 +69,6 @@ a:hover {
 }
 
 .right {
-    margin-top: 0px;
     text-align: right;
     float: right;
 }
@@ -195,7 +205,7 @@ a:hover {
     transition: 0.3s;
   }
 
-  .prev, .next {
+  .prev, .next, header {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -231,4 +241,78 @@ a:hover {
     .prev, .next {
         display: none;
     }
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 20px;
+  right: -20px;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 40px;
+  width: 40px;
+  left: 0px;
+  bottom: 4px;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  box-shadow: 0 0px 15px #2020203d;
+  background: white url('../icons/moon.svg');
+  fill: black;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(24px);
+  -ms-transform: translateX(24px);
+  transform: translateX(24px);
+  background: white url('../icons/sun.svg');
+  fill: black;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
