--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,17 @@ header {
 footer {
     margin-top: 24px;
     font-size: 14px;
+    display: block;
 }
+
+#fixed-footer {
+  position: absolute;
+  bottom:0;
+  width:90%;
+  box-sizing: border-box;
+  height:60px;   /* Height of the footer */
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -315,4 +325,45 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+#left-side {
+  float: left;
+  width: 400px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+#right-side {
+  float: right;
+  display:block;
+  width: 500px;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  display:block;
+  width:1000px;
+  margin: 0 auto !important;
+  padding-bottom: 10px;
+}
+
+/* Adjust to work on all screens */
+@media print, screen and (max-width: 1100px){
+  div.wrapper{
+      width:auto;
+      margin:0;
+  }
+  #left-side, #right-side, #fixed-footer{
+      float:none;position:static;width:auto;
+  }
+  #left-side {
+    text-align: center;
+    width: 66%;
+  }
+  section{
+      border:1px solid #e5e5e5;border-width:1px 0;
+      padding:20px 0;
+      margin:0 0 20px;
+  }
 }
