--- a/css/style.css
+++ b/css/style.css
@@ -24,17 +24,13 @@ body {
     background-color: var(--bkg-color);
 }
 
-body > *:not(.row, .modal, header) {
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
 header {
     margin-bottom: 50px;
 }
 
 footer {
     margin-top: 24px;
+    margin: 0 20px;
     font-size: 14px;
     display: block;
 }
@@ -48,30 +44,30 @@ footer {
 }
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
 
 /* Create four equal columns that sits next to each other */
 .column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 10px;
-    box-sizing: border-box;
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 10px;
+  box-sizing: border-box;
 }
 
 .column img {
-    margin-top: 20px;
-    vertical-align: middle;
-    width: 100%;
-    box-shadow: 10px 10px 10px #00000080;
+  margin-top: 20px;
+  vertical-align: middle;
+  width: 100%;
+  box-shadow: 10px 10px 10px #00000080;
 }
 
 a{
-    text-decoration: none;
-    font-weight: bold;
-    color: var(--link-color);
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--link-color);
 }
 
 a:hover {
@@ -84,7 +80,7 @@ a:hover {
 }
 
 .right > a {
-    padding-right: 20px;
+    padding-right: 15px;
 }
 
 .year {
@@ -344,26 +340,30 @@ input:checked + .slider:before {
 .wrapper {
   display:block;
   width:1000px;
-  margin: 0 auto !important;
+  margin: 0 auto;
   padding-bottom: 10px;
 }
 
 /* Adjust to work on all screens */
 @media print, screen and (max-width: 1100px){
+  
   div.wrapper{
-      width:auto;
-      margin:0;
+    width:auto;
+    margin: 0 20px;
   }
+
   #left-side, #right-side, #fixed-footer{
-      float:none;position:static;width:auto;
+    float:none;position:static;width:auto;
   }
+
   #left-side {
     text-align: center;
     width: 66%;
   }
+
   section{
-      border:1px solid #e5e5e5;border-width:1px 0;
-      padding:20px 0;
-      margin:0 0 20px;
+    border:1px solid #e5e5e5;border-width:1px 0;
+    padding:20px 0;
+    margin:0 0 20px;
   }
 }
