--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-html{
+:root {
+    --gap: 14px;
     --link-color: #ff9067;
 }
 
@@ -75,12 +76,17 @@ a:hover {
 }
 
 .right {
-    text-align: right;
     float: right;
+    list-style: none;
+    word-break: keep-all;
+    overflow-x: auto;
+    white-space: nowrap;
+    display: flex;
+    margin-top: 0px;
 }
 
-.right > a {
-    padding-right: 15px;
+.right > li {
+    margin-inline-start: var(--gap);
 }
 
 .year {
