--- a/css/style.css
+++ b/css/style.css
@@ -119,11 +119,11 @@ a:hover {
   padding: 1px 4px 1px;
 }
 
-.links > li a[href=""] {
+.links > li a:active {
   background: #9bfa9b90;
 }
 
-.links > li a:hover:not(a[href=""]) {
+.links > li a:hover:not(:active) {
   background: #f9f34b90;
 }
 
