--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ input:checked + .slider:before {
 
 #left-side {
   float: left;
-  width: 300px;
+  width: 30%;
   box-sizing: border-box;
   margin: 0 auto;
 }
@@ -400,12 +400,13 @@ input:checked + .slider:before {
 #right-side {
   float: right;
   display:block;
-  width: 500px;
+  width: 50%;
+  margin-right: 8%;
   box-sizing: border-box;
 }
 
 /* Adjust to work on all screens */
-@media print, screen and (max-width: 1100px){
+@media print, screen and (max-width: 1000px){
   
   div.wrapper{
     width:auto;
@@ -414,6 +415,10 @@ input:checked + .slider:before {
 
   #left-side, #right-side, #fixed-footer{
     float:none;position:static;width:auto;
+  }
+
+  #right-side {
+    margin-right: 0;
   }
 
   #left-side {
