--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,13 @@ a:hover {
   overflow: auto; /* Enable scrolling if the sidenav has too much content */
 }
 
+.nav-header {
+  padding: 0px 12px;
+  font-weight:bold;
+  font-size: 16px;
+  margin-bottom: 0px;
+}
+
 .wrapper{
   margin-left:25% !important;padding:1px 16px;
 }
