--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ a:hover {
   /*background-color: #bbb;*/
   list-style-type: none;
   padding: 0;
+  border-left: 6px solid var(--light-text-color);
 }
 
 .links > li {
