--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
     padding: 20px;
     color: var(--text-color);
     background-color: var(--bkg-color);
+    line-height: 1.6;
 }
 
 header {
@@ -109,7 +110,7 @@ a:hover {
 }
 
 .links > li {
-  padding: 12px 16px;
+  padding: 10px 16px;
   font-size: 16px;
 }
 
