--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -51,7 +51,7 @@
     <nav class="nav">
         <div class="logo">
             {{- if .Title }}
-            <a href="https://sophiezhng.github.io/" accesskey="h" title="{{ .Site.Params.label.text | default .Site.Title }} (Alt + H)"> 
+            <a href="https://sophiez.ca/" accesskey="h" title="{{ .Site.Params.label.text | default .Site.Title }} (Alt + H)"> 
                 {{- if .Site.Params.label.icon }}
                 <img src="{{- .Site.Params.label.icon -}}" alt="logo" aria-label="logo"
                     height="{{- .Site.Params.label.iconHeight | default "30px" -}}">
