--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,12 @@ a:hover {
   text-decoration: underline;
 }
 
+.title{
+  text-decoration: none !important;
+  color: var(--text-color);
+  font-size: 24px;
+}
+
 .right {
   float: right;
   list-style-type: none;
