--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,9 @@ input:checked + .slider:before {
     width:auto;
     margin: 0 25px;
   }
+  header{
+    margin-left: 16px;
+  }
 }
 
 .buttons {
