Add Courier New font

--- a/to-do/css/style.css
+++ b/to-do/css/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: monospace, Arial, Helvetica, sans-serif;
+    font-family: monospace, "Courier New", Arial, Helvetica, sans-serif;
 }
 .container { margin-top: 64px;
     }
