break words if overflow

--- a/to-do/css/style.css
+++ b/to-do/css/style.css
@@ -41,9 +41,10 @@ body {
 }
 
 .to-do {
-    overflow:auto;
+    overflow-wrap: break-word;
     white-space: normal;
 }
+
 .to-do > #text {
     display:flex;
     float: left;
